<resources>
    <string name="app_name">Android With Firebase</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  store  -->
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="store_products">100</string>

    <!--  products  -->
    <string name="product_name">Product Name</string>
    <string name="product_price">Rp 30.000</string>
    <string name="product_price_tittle">Product Price</string>
    <string name="product_discount">10%</string>
    <string name="product_disc">Product Discount</string>
    <string name="product_disc_price">Rp 27.000</string>

    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="form_store">Form Store</string>
    <string name="form_product">Form Product</string>
</resources>