<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:padding="10dp">

    <ImageView
        android:id="@+id/product_img"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_product" />

    <TextView
        android:id="@+id/product_name_tv"
        style="@style/Heading_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_img"
        app:layout_constraintTop_toTopOf="@+id/product_img" />

    <TextView
        android:id="@+id/product_disc_tv"
        style="@style/Heading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_discount"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/product_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/product_name_tv" />

    <TextView
        android:id="@+id/product_price_tv"
        style="@style/Heading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        app:layout_constraintStart_toStartOf="@+id/product_disc_tv"
        app:layout_constraintTop_toBottomOf="@+id/product_disc_tv" />

    <TextView
        android:id="@+id/product_disc_price_tv"
        style="@style/Heading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/product_disc_price"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/product_price_tv"
        app:layout_constraintTop_toBottomOf="@+id/product_disc_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>